# artificial-u

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DATABASE.md  README.md  __main__.py  alembic.ini  analyze_code.py  audio_voice_refactoring_summary.md  cli.py  conftest.py  docker-compose.yml  initialize_db.py  migrate_db.py  mise.toml  ollama-entrypoint.sh  pyproject.toml  pytest.ini  refactoring_plan.md  requirements-dev.txt  requirements.txt  run.sh  run_api.py  sample.py  sample_anthropic.py  sample_tinyllama.py  setup.py  system.py  test.txt
.cursor/rules/: web-code.mdc  workflow.mdc
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 1fa616d97d90_initial_migration.py  3d060fc71377_add_topics_jsonb_column_to_courses.py  423bdd8609c8_initial_migration.py  5aa908ae5d44_initial_migration.py  6a7f5b9b5515_initial_migration.py  89257aa218bf_initial_migration.py  92444c4efe6c_initial_migration.py  95816da14c74_rm_generated_at.py  a49c9875c8a8_initial_migration.py  afa3da9e5fee_rm_course_syllabus.py
artificial_u/: __init__.py  __main__.py  cli.py  system.py
artificial_u/api/: README.md  app.py  config.py  dependencies.py
artificial_u/api/middlewares/: README.md  cors_middleware.py  error_handler.py  logging_middleware.py
artificial_u/api/models/: __init__.py  courses.py  departments.py  error_codes.py  errors.py  lectures.py  professors.py  topics.py  voice.py
artificial_u/api/routers/: courses.py  departments.py  health.py  index.py  lectures.py  professors.py  topics.py  voice.py
artificial_u/api/services/: __init__.py  course_service.py  department_service.py  lecture_service.py  professor_service.py  topic_service.py
artificial_u/api/utils/: errors.py  exceptions.py  logging.py
artificial_u/audio/: audio_utils.py  processor.py  speech_processor.py  voice_selector.py
artificial_u/cli/: app.py  elevenlabs_tools.py
artificial_u/config/: __init__.py  config_manager.py  defaults.py  settings.py
artificial_u/generators/: __init__.py  content.py  factory.py  ollama_adapter.py
artificial_u/integrations/: __init__.py  elevenlabs.py
artificial_u/integrations/anthropic/: __init__.py  client.py
artificial_u/integrations/azure/: client.py
artificial_u/integrations/elevenlabs/: __init__.py  cache.py  client.py  voice_mapper.py
artificial_u/integrations/gemini/: __init__.py  client.py
artificial_u/integrations/ollama/: __init__.py  client.py
artificial_u/integrations/openai/: __init__.py  client.py
artificial_u/models/: converters.py  core.py  database.py  repository.py
artificial_u/models/repositories/: README.md  __init__.py  base.py  course.py  department.py  factory.py  lecture.py  professor.py  topic.py  voice.py
artificial_u/prompts/: __init__.py  base.py  course.py  courses.py  department.py  image.py  images.py  lecture.py  lectures.py  professor.py  professors.py  system.py  topics.py
artificial_u/services/: __init__.py  audio_service.py  content_service.py  course_service.py  department_service.py  image_service.py  lecture_service.py  professor_service.py  storage_service.py  topic_service.py  tts_service.py  voice_service.py
artificial_u/utils/: __init__.py  exceptions.py  random_generators.py
audio/: processor.py
cli/: app.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  COURSE_TOPICS_REFACTOR.md  DATABASE.md  POSTGRES.md  ROADMAP.md  accents.md  audio_voice_refactoring_plan.md  code_quality.md  configuration.md  dependency_management.md  development.md  elevenvoices.md  error_handling.md  migration_plan_repository_pattern.md  models.json  pyproject_usage.md  real-world-courses.md  refactoring_plan.md  refactoring_summary.md  test.md  testing-with-ollama.md  voices-response.json
migrations/: 00001_initial_schema.sql
models/: database.py
prompts/: lecture.py
samples/: .gitkeep  quantum-lecture.md  sample_lecture.md  statistical-learning-lecture.md  tensors-lecture.md
scripts/: analyze_code.py  cli.py  create_fts_index.py  initialize_db.py  rebuild_dev_db.py  sample_anthropic.py  sample_tinyllama.py  setup_test_db.py  update_lockfiles.sh
tests/: __init__.py  conftest.py  test_prompts.py  test_voice_selection.py
tests/api/: __init__.py  conftest.py  test_app.py  test_cors.py  test_courses.py  test_departments.py  test_lectures.py  test_professors.py  test_topics.py
tests/e2e/: test_cli.py
tests/integration/: .pylintrc  __init__.py  conftest.py  setup_test_db.py  test_course_service.py  test_database.py  test_department_service.py  test_generator_factory.py  test_lecture_service.py  test_ollama_generator.py  test_professor_service.py  test_repository.py  test_system.py  test_system_integration.py  test_voice_service.py
tests/integration/services/: test_course_service.py  test_department_service.py  test_lecture_service.py  test_professor_service.py  test_topic_service.py
tests/legacy/: test_elevenlabs_client.py  test_system.py  test_system_integration.py  test_voice_mapper.py  test_voice_service.py
tests/manual/: README.md  test_api_integration.py  test_elevenlabs.py  test_elevenlabs_integration.py  test_elevenlabs_simple.py  test_voice_selection_live.py
tests/unit/: README.md  conftest.py  test_api_keys.py  test_base_prompt.py  test_base_repository.py  test_converters.py  test_course_prompt.py  test_course_repository.py  test_department_prompt.py  test_department_repository.py  test_elevenlabs_client.py  test_image_prompt.py  test_lecture_prompt.py  test_lecture_repository.py  test_models.py  test_professor_prompt.py  test_professor_repository.py  test_prompts.py  test_repository_factory.py  test_voice_mapper.py  test_voice_repository.py  test_voice_service.py
web/: .stylelintrc.json  README.md  STYLE_GUIDE.md  biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: App.css  App.tsx  index.css  index.tsx
web/src/api/: client.ts  (+3 more)
(+86 files in other folders)
